--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -16,6 +16,18 @@ html {
     padding: 0 15px;
 }
 
+.container-fluid {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+@media (max-width: 720px) {
+    .container-fluid {
+        padding: 0 15px;
+    }
+}
+
 a {
     color: inherit;
     display: inline-block;
@@ -39,4 +51,13 @@ body {
     font-size: 15px;
     line-height: 24px;
     font-weight: 400;
+}
+
+.title {
+    text-align: center;
+    color: $bg;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 60px;
+    margin-bottom: 30px;
 }
