--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -56,7 +56,7 @@ body {
 .title {
     text-align: center;
     color: $bg;
-    font-weight: 700;
+    @include f700; // <-------  mixin
     font-size: 36px;
     line-height: 60px;
     margin-bottom: 30px;
