--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,3 +3,14 @@ $red: #e74c3c;
 $green: #8bc34a;
 $bg: #263238;
 $grey: #f4f6f5;
+@mixin f500 {
+    // <-------  mixin
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+@mixin f700 {
+    // <-------  mixin
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
