--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -72,13 +72,13 @@
     &-title {
         margin-bottom: 10px;
         font-size: 48px;
-        font-weight: 700;
+        @include f700; // <-------  mixin
         line-height: 72px;
     }
     &-text {
         margin-bottom: 50px;
         font-size: 20px;
-        font-weight: 500;
+        @include f500; // <-------  mixin
         line-height: 30px;
     }
     &-form {
@@ -93,12 +93,12 @@
             height: 56px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500; // <-------  mixin
             padding-left: 25px;
             padding-right: 60px;
             &::placeholder {
                 color: #90a4ae;
-                font-weight: 500;
+                @include f500; // <-------  mixin
             }
             // &:focus {
             //     border: 1px solid $green;
@@ -164,7 +164,7 @@
         padding: 10px 30px;
         align-items: center;
         min-height: 90px;
-        font-weight: 500;
+        @include f500; // <-------  mixin
         border-bottom: 1px solid #e7ecf2;
     }
     &-name {
@@ -181,7 +181,7 @@
     }
     &-price {
         font-size: 20px;
-        font-weight: 700;
+        @include f700; // <-------  mixin
         color: $bg;
     }
     &-info {
@@ -207,7 +207,7 @@
         }
         span {
             font-size: 14px;
-            font-weight: 500;
+            @include f500; // <-------  mixin
         }
     }
     &-star {
@@ -265,8 +265,61 @@
 }
 
 // end products-slider
-// start products-slider
-// end products-slider
+// start advantages
+.advantages {
+    background-color: $bg;
+    min-height: 615px;
+    padding: 110px 0;
+}
+
+.advantages__title {
+    color: #fff;
+}
+
+.advantages__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.advantages__item {
+    max-width: 370px;
+    text-align: center;
+    padding: 0 15px;
+    &:hover {
+        .advantages__item-images {
+            background-color: $green;
+            path {
+                fill: #fff;
+            }
+        }
+        .advantages__item-title {
+            color: $green;
+        }
+    }
+    &-images {
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+        transition: all .5s;
+    }
+    &-title {
+        margin-bottom: 25px;
+        font-size: 24px;
+        color: #fff;
+        @include f500;
+        transition: all .5s;
+    }
+    &-text {
+        font-size: 15px;
+    }
+}
+
+// end advantages
 // start products-slider
 // end products-slider
 // start products-slider
