--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -268,7 +268,6 @@
 // start advantages
 .advantages {
     background-color: $bg;
-    min-height: 615px;
     padding: 110px 0;
 }
 
@@ -320,8 +319,43 @@
 }
 
 // end advantages
-// start products-slider
-// end products-slider
+// start author
+.author {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__box {
+        max-width: 650px;
+        width: 100%;
+        min-height: 215px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $green;
+    }
+    &__title {
+        font-size: 30px;
+        line-height: 30px;
+        color: #fff;
+        margin-right: 45px;
+        max-width: 275px;
+        span {
+            @include f700;
+        }
+    }
+    &__link {
+        font-size: 18px;
+        line-height: 36px;
+        padding: 14px 40px;
+        background-color: #fff;
+    }
+}
+
+// end author
 // start products-slider
 // end products-slider
 // start products-slider
