--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -313,9 +313,6 @@
         @include f500;
         transition: all .5s;
     }
-    &-text {
-        font-size: 15px;
-    }
 }
 
 // end advantages
@@ -387,7 +384,168 @@
 }
 
 // end tutorial
-// start products-slider
-// end products-slider
-// start products-slider
-// end products-slider
+// start footer
+.footer {
+    background-color: $bg;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding: 100px 0 80px;
+    }
+}
+
+.footer__copy {
+    border-top: 1px solid #424d53;
+}
+
+.footer__copy-text {
+    text-align: center;
+    color: #919699;
+    padding: 25px 0;
+}
+
+.footer__col {
+    max-width: 270px;
+    width: 100%;
+    &-menu {
+        max-width: 220px;
+    }
+    &-title {
+        font-size: 22px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        color: #fff;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        position: relative;
+        &::after {
+            content: '';
+            position: absolute;
+            width: 51px;
+            height: 3px;
+            background-color: $green;
+            left: 2px;
+            bottom: 0;
+        }
+    }
+    &-text {
+        color: #b7c3c8;
+        margin-bottom: 30px;
+    }
+}
+
+.footer__info {
+    margin-top: 18px;
+    color: #fff;
+    @include f500;
+    padding-left: 30px;
+    position: relative;
+    &::before {
+        content: '\f041';
+        font-family: 'icomoon';
+        color: $green;
+        font-size: 18px;
+        position: absolute;
+        left: 0;
+    }
+}
+
+.footer__info-phone {
+    &::before {
+        content: '\f095';
+    }
+}
+
+.footer__col-list {
+    li {
+        display: block;
+    }
+    a {
+        font-size: 15px;
+        margin-bottom: 13px;
+        color: #b7c3c8;
+        padding-left: 22px;
+        position: relative;
+        &::before {
+            content: '\f105';
+            color: $green;
+            position: absolute;
+            left: 0;
+            font-size: 18px;
+            font-family: 'icomoon';
+        }
+    }
+}
+
+.footer__social-link {
+    margin-bottom: 33px;
+    li+li {
+        margin-left: 7px;
+    }
+    a {
+        width: 28px;
+        height: 28px;
+        background-image: url(../img/css_sprites.png);
+    }
+}
+
+.link-tw {
+    background-position: -28px 0;
+}
+
+.link-yout {
+    background-position: 0 -28px;
+}
+
+.link-pt {
+    background-position: -28px -28px;
+}
+
+.link-in {
+    background-position: -56px 0;
+}
+
+.footer__form-title {
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 15px;
+}
+
+.footer__form {
+    position: relative;
+    input {
+        border: none;
+        background-color: #2f3c43;
+        display: block;
+        width: 100%;
+        height: 40px;
+        color: #fff;
+        font-size: 14px;
+        padding-left: 13px;
+        padding-right: 50px;
+        &::placeholder {
+            color: #697378;
+        }
+    }
+    button {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background-color: $green;
+        border: none;
+        height: 40px;
+        width: 43px;
+        cursor: pointer;
+        &::before {
+            content: '\f124';
+            position: absolute;
+            font-family: 'icomoon';
+            font-size: 20px;
+            color: #fff;
+            top: 11px;
+            left: 13px;
+        }
+    }
+}
+
+// end footer
