--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -63,6 +63,15 @@
     background-size: cover;
     background-position: center;
     min-height: 533px;
+    &.page-search {
+        min-height: 230px;
+        .search__inner {
+            padding: 55px 0 70px;
+            &-text {
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
 
 .search__inner {
@@ -196,7 +205,7 @@
         align-items: center;
         max-width: 245px;
         .avatar {
-            width: 32px;
+            min-width: 32px;
             height: 32px;
             border-radius: 50%;
             background-position: center;
@@ -212,6 +221,9 @@
     }
     &-star {
         font-size: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
         span {
             color: $bg;
         }
@@ -254,6 +266,7 @@
                 height: 16px;
                 cursor: pointer;
                 outline: none;
+                font-size: 0;
             }
             &.slick-active {
                 button {
@@ -549,3 +562,291 @@
 }
 
 // end footer
+// start product-page
+.product-page__inner {
+    display: flex;
+    padding-bottom: 110px;
+}
+
+.product-page__aside {
+    margin-right: 30px;
+}
+
+.aside__item {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+}
+
+.aside__title {
+    border-bottom: 1px solid #dedede;
+    font-size: 20px;
+    color: $bg;
+    padding: 22px 0 19px;
+    @include f700;
+}
+
+.category__list {
+    padding-top: 10px;
+    li {
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        padding-left: 20px;
+        &::before {
+            content: '\f105';
+            color: #8bc34a;
+            position: absolute;
+            left: 0;
+            font-size: 18px;
+            font-family: 'icomoon';
+        }
+    }
+    a {
+        color: $bg;
+    }
+    span {
+        color: #90a4ae;
+    }
+}
+
+.price-range {
+    form {
+        padding-top: 20px;
+    }
+    button {
+        margin-top: 55px;
+        padding: 16px 10px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        width: 100%;
+        display: block;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        &::before {
+            content: '\f002';
+            color: #fff;
+            position: absolute;
+            left: 58px;
+            top: 15px;
+            font-size: 15px;
+            font-family: 'icomoon';
+        }
+    }
+}
+
+.irs-min,
+.irs-max,
+.irs--flat .irs-from:before,
+.irs--flat .irs-single:before,
+.irs--flat .irs-to:before,
+.irs--flat .irs-handle>i:first-child {
+    display: none;
+}
+
+.irs--flat .irs-line {
+    background-color: #f2f5f8;
+    height: 5px;
+}
+
+.irs--flat .irs-bar {
+    background-color: $bg;
+    height: 5px;
+}
+
+.irs--flat .irs-handle {
+    width: 16px;
+    height: 16px;
+    border: 4px solid $green;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
+.irs-from,
+.irs-single,
+.irs-to {
+    top: 45px;
+}
+
+.irs--flat .irs-from,
+.irs--flat .irs-single,
+.irs--flat .irs-to {
+    color: #78909c;
+    font-size: 15px;
+    line-height: 1.333;
+    text-shadow: none;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+    top: 19px;
+}
+
+.product-page__aside {
+    .products__item-img {
+        min-height: 120px;
+    }
+    .products__item {
+        box-shadow: none;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #dde3e8;
+    }
+    .products__item-content {
+        padding: 0;
+        min-height: 75px;
+        border-bottom: none;
+    }
+    .products__item-info {
+        padding: 0;
+        min-height: 0;
+    }
+    .products__item-title {
+        font-size: 16px;
+    }
+    .products__item-price {
+        font-size: 16px;
+    }
+    .products__item-info-none {
+        display: none;
+    }
+    .rate-star {
+        margin-right: 0;
+        padding-right: 0;
+    }
+    .products__item-author .avatar {
+        margin-right: 9px;
+    }
+}
+
+.aside__product-item {
+    .products__item:last-child {
+        border: none;
+        padding-bottom: 0;
+    }
+    .products__item:first-child {
+        margin-top: 25px;
+    }
+}
+
+.top-sellers__link {
+    padding: 16px 10px;
+    display: block;
+    background-color: $green;
+    color: #fff;
+    @include f500;
+    text-align: center;
+}
+
+.product-page__filter {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 20px;
+    margin-bottom: 30px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+        cursor: pointer;
+        outline: none;
+        border: none;
+        background-color: transparent;
+        font-size: 16px;
+        color: #90a4ae;
+        &.active {
+            color: $green;
+        }
+    }
+}
+
+.product-page__filter-sort {
+    color: #707070;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+button.icon-sort-amount-desc {
+    font-size: 18px;
+    color: #455a64;
+}
+
+button.icon-sort {
+    font-size: 14px;
+    color: #707070;
+}
+
+.product-page__content {
+    width: 100%;
+}
+
+.product-page__content {
+    .products__item {
+        max-width: 270px;
+        background-color: #fff;
+    }
+    .products__item-img {
+        min-height: 180px;
+    }
+    .products__item-content {
+        padding: 10px 20px;
+    }
+    .products__item-title {
+        font-size: 16px;
+    }
+    .products__item-info {
+        min-height: 65px;
+        padding: 10px 20px;
+    }
+    .rate-star {
+        margin-right: 5px;
+        padding: 0;
+    }
+}
+
+.product-page__items {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+
+.pagination__list {
+    li+li {
+        margin-left: 6px;
+    }
+    a,
+    span {
+        box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+        width: 43px;
+        height: 38px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        font-size: 16px;
+        color: $bg;
+        @include f500;
+        &.active {
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+
+// end product-page
+// start product-page
+// end product-page
+// start product-page
+// end product-page
+// start product-page
+// end product-page
