--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -793,6 +793,7 @@ button.icon-sort {
     .products__item {
         max-width: 270px;
         background-color: #fff;
+        transition: all .5s;
     }
     .products__item-img {
         min-height: 180px;
@@ -839,6 +840,87 @@ button.icon-sort {
         &.active {
             background-color: $red;
             color: #fff;
+        }
+    }
+}
+
+.products__item-text {
+    display: none;
+}
+
+.products__item-price {
+    span {
+        display: none;
+    }
+}
+
+.products__item-list {
+    display: none;
+    .icon-comment-o,
+    .icon-heart-o {
+        display: inline-block;
+        font-size: 12px;
+        color: #70838d;
+        padding-left: 50px;
+        border-left: 1px solid #aeb4bb;
+        position: relative;
+        span {
+            color: $bg;
+            @include f500;
+        }
+        &::before {
+            font-size: 16px;
+            color: $green;
+            position: absolute;
+            left: 20px;
+            top: 0;
+        }
+    }
+    .icon-comment-o {
+        padding-right: 30px;
+        &::before {
+            top: -2px;
+        }
+    }
+}
+
+.products__item {
+    &.list {
+        max-width: 100%;
+        .products__item-img {
+            width: 240px;
+            float: left;
+            min-height: 100%;
+        }
+        .products__item-text {
+            display: block;
+            font-size: 14px;
+            color: #70838d;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+        .products__item-price {
+            font-size: 30px;
+            span {
+                display: block;
+                font-size: 13px;
+                color: #aeb4bb;
+                margin-top: 30px;
+                font-weight: 400;
+            }
+        }
+        .products__item-name {
+            max-width: 480px;
+        }
+        .products__item-content {
+            padding-top: 23px;
+        }
+        .products__item-list {
+            display: block;
+        }
+        .products__item-star {
+            margin-left: auto;
+            margin-right: 30px;
         }
     }
 }
