added media for header and footer

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,10 @@
 @import 'global';
 @import 'fonts';
 // start header
+.header {
+    background-color: #fff;
+}
+
 .header__top-inner {
     display: flex;
     justify-content: space-between;
@@ -107,6 +111,7 @@
 }
 
 .basket {
+    margin-right: 20px;
     span {
         background-color: $green;
     }
@@ -124,7 +129,6 @@
 }
 
 .user {
-    margin-left: 20px;
     margin-right: 25px;
     padding-right: 20px;
     position: relative;
@@ -208,6 +212,7 @@
     right: 0;
     height: 0;
     overflow: hidden;
+    z-index: 3;
 }
 
 .basket__box,
@@ -326,6 +331,11 @@
 
 .icons-color::before {
     color: $tomato;
+}
+
+.header__btn-menu,
+.menu__btn {
+    display: none;
 }
 
 // end header
@@ -1198,6 +1208,7 @@ button.icon-sort {
 }
 
 // end product-page
+@import 'media';
 // start product-page
 // end product-page
 // start product-page
