--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,7 +1,7 @@
 html {
     box-sizing: border-box;
-    max-width: 100vw;
-    overflow-x: hidden;
+    // max-width: 100vw;
+    // overflow-x: hidden;
 }
 
 *,
