--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -339,23 +339,122 @@
 }
 
 // end header
-// start search 
-.search {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    min-height: 533px;
-    &.page-search {
-        min-height: 230px;
-        .search__inner {
-            padding: 55px 0 70px;
-            &-text {
-                margin-bottom: 20px;
+// start modal
+#modal {
+    background-color: $green;
+    max-width: 730px;
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 100px;
+}
+
+.login__title {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 48px;
+    margin-bottom: 40px;
+    color: #fff;
+    @include f700;
+}
+
+.login__wrapper {
+    form {
+        max-width: 400px;
+        margin: 0 auto;
+        label {
+            position: relative;
+            display: block;
+            &::before {
+                position: absolute;
+                font-family: 'icomoon';
+                font-size: 14px;
+                color: #fff;
+                left: 18px;
+                top: 9px;
             }
+        }
+        .login__label-name::before {
+            content: '\f007';
+        }
+        .login__label-pass:before {
+            content: '\f023';
+        }
+        input {
+            height: 43px;
+            margin-bottom: 8px;
+            border: none;
+            background-color: #76ae36;
+            color: #fff;
+            font-size: 14px;
+            padding-left: 40px;
+            display: block;
+            width: 100%;
+            &::placeholder {
+                color: #fff;
+                font-size: 14px;
+            }
+        }
+        button {
+            margin-top: 19px;
+            padding: 18px 0 16px;
+            background-color: #fff;
+            text-transform: uppercase;
+            width: 140px;
+            border: none;
+            margin-right: 10px;
+            @include f700;
+            color: #000;
+            text-align: center;
+            box-shadow: 0px 2px 2px 0px rgba(118, 174, 54, 0.75);
+            cursor: pointer;
+        }
+        .creat-acc {
+            margin-top: 19px;
+            padding: 15px 0 15px 28px;
+            text-align: center;
+            width: 245px;
+            background-color: #76ae36;
+            color: #fff;
+            font-size: 18px;
+            position: relative;
+            &::before {
+                content: '\f044';
+                position: absolute;
+                top: 15px;
+                left: 35px;
+                font-family: 'icomoon';
+            }
+        }
+        .lost-pass {
+            display: block;
+            color: #fff;
+            margin-top: 20px;
+            font-size: 18px;
         }
     }
 }
 
+.fancybox-button svg path {
+    fill: transparent;
+}
+
+.fancybox-slide--html .fancybox-close-small {
+    right: 14px;
+    top: 8px;
+    &::before {
+        content: "\f00d";
+        position: absolute;
+        font-family: 'icomoon';
+        font-size: 14px;
+        top: 13px;
+        right: 0;
+        left: 0;
+        color: #fff;
+    }
+}
+
+// end modal
+// start search 
 .search__inner {
     padding: 155px 0px 100px;
     color: #fff;
