--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1667,8 +1667,71 @@ button.icon-sort {
 }
 
 // end product-one
-// start product-page
-// end product-page
+// start 404-page
+.page-404__wrapper {
+    border: 1px solid #dcdcdc;
+    background-color: #fff;
+    margin-bottom: 150px;
+}
+
+.page-404__head {
+    font-size: 24px;
+    color: #444;
+    padding: 23px 27px;
+    @include f500;
+    border-bottom: 1px solid #dcdcdc;
+}
+
+.page-404__inner {
+    text-align: center;
+    background-color: $green;
+    color: #fff;
+}
+
+.page-404__404 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+    font-size: 300px;
+    padding-top: 70px;
+    line-height: 300px;
+    position: relative;
+    padding-bottom: 20px;
+    &::after {
+        position: absolute;
+        content: '';
+        background-image: url(../img/page-404.png);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 150px;
+        height: 292px;
+        margin-left: 20px;
+    }
+}
+
+.page-404__title {
+    margin-bottom: 30px;
+    @include f300;
+    font-size: 30px;
+}
+
+.page-404__text {
+    font-size: 18px;
+    max-width: 510px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+}
+
+.page-404__link {
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 20px 30px 16px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    margin-bottom: 100px;
+}
+
+// end 404-page
 // start product-page
 // end product-page
 @import 'media';
