--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1877,4 +1877,100 @@ button.icon-sort {
 }
 
 // end contact
+/////////////////////////
+// start settings
+.settings {
+    padding-bottom: 100px;
+}
+
+.product-one__tabs.settings__tabs {
+    display: flex;
+    .tabs {
+        max-width: 270px;
+        width: 100%;
+        margin-right: 30px;
+        border: 1px solid #dedede;
+        border-bottom: none;
+        text-align: left;
+        display: block;
+        height: 100%;
+        span {
+            display: block;
+            background-color: #fff;
+            border-bottom: 1px solid #dedede;
+            padding: 17px 17px 17px 50px;
+            font-size: 14px;
+            color: #707070;
+            @include f500;
+            &.active {
+                border-bottom: 2px solid $green;
+                &::before {
+                    color: $green;
+                }
+            }
+            &::before {
+                left: 24px;
+                color: #444;
+            }
+        }
+    }
+    .tab_content {
+        width: 100%;
+        padding: 0;
+        border: none;
+        background-color: transparent;
+    }
+    .tabs .tab+.tab {
+        border-left: none;
+    }
+}
+
+.page-box {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    min-height: 100%;
+}
+
+.page-box__title {
+    border-bottom: 1px solid #dedede;
+    padding: 18px 34px;
+    font-size: 24px;
+    @include f500;
+    color: $bg;
+}
+
+.page-box__content {
+    padding: 30px 35px 80px;
+}
+
+.settings__line {
+    margin-bottom: 21px;
+    display: flex;
+    align-items: center;
+    label {
+        width: 260px;
+        color: #444;
+    }
+    input {
+        max-width: 540px;
+        width: 100%;
+        height: 40px;
+        border: 1px solid #dedede;
+        color: #000;
+        background-color: #f9f9f9;
+        padding: 0 10px;
+    }
+    select {
+        max-width: 540px;
+        width: 100%;
+        height: 40px;
+        border: 1px solid #dedede;
+        color: #000;
+        background-color: #f9f9f9;
+        padding: 0 10px;
+        color: #707070;
+    }
+}
+
+// end settings
 @import 'media';
