--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -94,6 +94,8 @@ body {
 .breadcrumbs {
     &__inner {
         padding: 45px 0 40px;
+        overflow: hidden; ///<-----------adaptive
+        width: 1200px; ///<-----------adaptive
     }
     &__list {
         li {
@@ -133,4 +135,8 @@ body {
         color: $green;
         font-size: 14px;
     }
+}
+
+#modal {
+    display: none;
 }
